--- a/src/browser/app/list/list.component.html
+++ b/src/browser/app/list/list.component.html
@@ -35,8 +35,8 @@
         <mat-icon matChipRemove>cancel</mat-icon>
       </mat-chip>
     </mat-chip-list>
-    <span style="flex: 1 1 auto;"></span>
-    <mat-form-field style="width: 100px;">
+    <span style="flex: 1 1 auto"></span>
+    <mat-form-field style="width: 100px">
       <mat-label>图片显示</mat-label>
       <mat-select [ngModel]="showImg | async" (ngModelChange)="navigateParam({ showImg: $event })">
         <mat-option value="all">全部显示</mat-option>
@@ -113,11 +113,11 @@
         </ng-container>
 
         <ng-container matColumnDef="handle" sticky>
-          <th mat-header-cell *matHeaderCellDef style="width: 40px;">
+          <th mat-header-cell *matHeaderCellDef style="width: 40px">
             <button
               matTooltip="新增"
               matTooltipPosition="right"
-              matTooltipShowDelay="500"
+              matTooltipShowDelay="200"
               mat-icon-button
               class="mat-accent"
               [routerLink]="['/edit', (namespace | async) || 'aritst', '*new']"
@@ -126,20 +126,24 @@
             </button>
           </th>
           <td mat-cell *matCellDef="let row">
-            <button
+            <div
               [matTooltip]="
                 editableNs.indexOf(row.namespace) < 0
                   ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改'
                   : '编辑'
               "
               matTooltipPosition="right"
-              matTooltipShowDelay="500"
-              mat-icon-button
-              class="mat-accent"
-              [routerLink]="['/edit', row.namespace, row.raw]"
+              matTooltipShowDelay="200"
             >
-              <mat-icon>edit</mat-icon>
-            </button>
+              <button
+                [disabled]="editableNs.indexOf(row.namespace) < 0"
+                mat-icon-button
+                class="mat-accent"
+                [routerLink]="['/edit', row.namespace, row.raw]"
+              >
+                <mat-icon>edit</mat-icon>
+              </button>
+            </div>
           </td>
         </ng-container>
 
