--- a/src/browser/styles/index.scss
+++ b/src/browser/styles/index.scss
@@ -1,16 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '~@angular/material' as mat;
 @import 'theme';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core($app-typography);
+@include mat.core($app-typography);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($app-theme);
+@include mat.all-component-themes($app-theme);
 
 @import url(https://unpkg.com/material-design-icons/iconfont/material-icons.css);
 
@@ -27,7 +28,7 @@ body {
 }
 
 a {
-  color: mat-color(map-get($app-theme, primary));
+  color: mat.get-color-from-palette(map-get($app-theme, primary));
   text-decoration: none;
 
   &[href^='http://'], &[href^='https://']
@@ -36,7 +37,7 @@ a {
   }
 
   &:hover {
-    color: mat-color(map-get($app-theme, accent));
+    color: mat.get-color-from-palette(map-get($app-theme, accent));
   }
 }
 
