--- a/src/browser/app/app.component.html
+++ b/src/browser/app/app.component.html
@@ -3,7 +3,7 @@
     <mat-icon>arrow_back</mat-icon>
   </button>
   <button id="home-button" mat-button [routerLink]="['/']"><span class="mat-title">EhTag Editor</span></button>
-  <span style="flex: 1 1 auto;"></span>
+  <span style="flex: 1 1 auto"></span>
   <app-user id="user-button"></app-user>
   <app-github-corner [href]="dbRepo.root" target="_blank"></app-github-corner>
 </mat-toolbar>
