--- a/src/browser/app/user/user.component.html
+++ b/src/browser/app/user/user.component.html
@@ -3,7 +3,7 @@
   <span>{{ user?.name }}</span>
 </button>
 <button class="user-button" mat-button *ngIf="!user && !loading" (click)="logIn()">
-  <span class="iconfont" style="font-size: 1.8em;">&#xe709; </span> 登录
+  <span class="iconfont" style="font-size: 1.8em">&#xe709; </span> 登录
 </button>
 <button class="user-button" mat-button *ngIf="loading">
   <mat-spinner id="loading" [diameter]="32"></mat-spinner>
