--- a/src/browser/app/list/list.component.html
+++ b/src/browser/app/list/list.component.html
@@ -120,7 +120,7 @@
               matTooltipShowDelay="200"
               mat-icon-button
               class="mat-accent"
-              [routerLink]="['/edit', (namespace | async) || 'aritst', '*new']"
+              [routerLink]="['/edit', (namespace | async) || 'artist', '*new']"
             >
               <mat-icon>add_circle</mat-icon>
             </button>
