--- a/src/browser/app/list/list.component.html
+++ b/src/browser/app/list/list.component.html
@@ -1,32 +1,15 @@
 <div class="page-box" id="root" [ngClass]="'show-img-' + (showImg | async)">
   <header>
     <mat-form-field id="search">
-      <mat-label> <mat-icon matPrefix>search</mat-icon>搜索 </mat-label>
-      <input
-        [ngModel]="search | async"
-        (ngModelChange)="navigateParam({ search: $event, pageIndex: 0 })"
-        matInput
-        placeholder="string or /regex/"
-        type="search"
-        autocomplete="off"
-        (paste)="pasting($event)"
-      />
-      <span
-        *ngIf="(usingRegex | async) && (search | async)"
-        matSuffix
-        class="mat-hint"
-        matTooltip="正在使用正则表达式进行匹配"
-        matTooltipPosition="above"
-        >.*</span
-      >
-      <span
-        *ngIf="!(usingRegex | async) && (search | async)"
-        matSuffix
-        class="mat-hint"
-        matTooltip="正在使用普通文本进行匹配"
-        matTooltipPosition="above"
-        >ab</span
-      >
+      <mat-label>
+        <mat-icon matPrefix>search</mat-icon>搜索
+      </mat-label>
+      <input [ngModel]="search | async" (ngModelChange)="navigateParam({ search: $event, pageIndex: 0 })" matInput
+        placeholder="string or /regex/" type="search" autocomplete="off" (paste)="pasting($event)" />
+      <span *ngIf="(usingRegex | async) && (search | async)" matSuffix class="mat-hint" matTooltip="正在使用正则表达式进行匹配"
+        matTooltipPosition="above">.*</span>
+      <span *ngIf="!(usingRegex | async) && (search | async)" matSuffix class="mat-hint" matTooltip="正在使用普通文本进行匹配"
+        matTooltipPosition="above">ab</span>
       <span *ngIf="!(search | async)" matSuffix class="mat-hint"></span>
     </mat-form-field>
     <mat-chip-list class="filter-list">
@@ -45,28 +28,17 @@
         <mat-option value="none">全部隐藏</mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-paginator
-      [length]="(filteredTags | async)?.length"
-      [pageIndex]="pageIndex | async"
-      [pageSize]="pageSize | async"
-      [pageSizeOptions]="[10, 25, 50, 100]"
-      (page)="navigateParam({ pageIndex: $event.pageIndex, pageSize: $event.pageSize })"
-    >
+    <mat-paginator [length]="(filteredTags | async)?.length" [pageIndex]="pageIndex | async"
+      [pageSize]="pageSize | async" [pageSizeOptions]="[10, 25, 50, 100]"
+      (page)="navigateParam({ pageIndex: $event.pageIndex, pageSize: $event.pageSize })">
     </mat-paginator>
   </header>
   <section>
     <div id="table-wrapper">
-      <table
-        (copy)="copying($event)"
-        [style.display]="(loading | async) ? 'hidden' : ''"
-        mat-table
-        [dataSource]="pagedTags"
-        aria-label="Elements"
-        matSort
-        [matSortActive]="(sortBy | async) || ''"
+      <table (copy)="copying($event)" [style.display]="(loading | async) ? 'hidden' : ''" mat-table
+        [dataSource]="pagedTags" aria-label="Elements" matSort [matSortActive]="(sortBy | async) || ''"
         [matSortDirection]="(sortDirection | async) || ''"
-        (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })"
-      >
+        (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
         <ng-container matColumnDef="namespace">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
           <td mat-cell *matCellDef="let row">
@@ -80,12 +52,8 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始标签</th>
           <td mat-cell *matCellDef="let row">
             <div>
-              <a
-                *ngIf="row.namespace === 'rows'; else notRow"
-                (click)="setNs(row.raw)"
-                [routerLink]="['/list', row.raw]"
-                [innerHTML]="row.raw | mark: (search | async)"
-              ></a>
+              <a *ngIf="row.namespace === 'rows' && row.raw !== 'temp'; else notRow" (click)="setNs(row.raw)"
+                [routerLink]="['/list', row.raw]" [innerHTML]="row.raw | mark: (search | async)"></a>
               <ng-template #notRow><span [innerHTML]="row.raw | mark: (search | async)"></span></ng-template>
             </div>
           </td>
@@ -114,33 +82,19 @@
 
         <ng-container matColumnDef="handle" sticky>
           <th mat-header-cell *matHeaderCellDef style="width: 40px">
-            <button
-              matTooltip="新增"
-              matTooltipPosition="right"
-              matTooltipShowDelay="200"
-              mat-icon-button
-              class="mat-accent"
-              [routerLink]="['/edit', (namespace | async) || 'artist', '*new']"
-            >
+            <button matTooltip="新增" matTooltipPosition="right" matTooltipShowDelay="200" mat-icon-button
+              class="mat-accent" [routerLink]="['/edit', (namespace | async) || 'artist', '*new']">
               <mat-icon>add_circle</mat-icon>
             </button>
           </th>
           <td mat-cell *matCellDef="let row">
-            <div
-              [matTooltip]="
+            <div [matTooltip]="
                 editableNs.indexOf(row.namespace) < 0
                   ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改'
                   : '编辑'
-              "
-              matTooltipPosition="right"
-              matTooltipShowDelay="200"
-            >
-              <button
-                [disabled]="editableNs.indexOf(row.namespace) < 0"
-                mat-icon-button
-                class="mat-accent"
-                [routerLink]="['/edit', row.namespace, row.raw]"
-              >
+              " matTooltipPosition="right" matTooltipShowDelay="200">
+              <button [disabled]="editableNs.indexOf(row.namespace) < 0" mat-icon-button class="mat-accent"
+                [routerLink]="['/edit', row.namespace, row.raw]">
                 <mat-icon>edit</mat-icon>
               </button>
             </div>
