--- a/src/browser/styles/index.scss
+++ b/src/browser/styles/index.scss
@@ -3,14 +3,18 @@
 @use '@angular/material' as mat;
 @import 'theme';
 
+/* 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+// Be sure that you only ever include this mixin once! 
+*/
 @include mat.core($app-typography);
 
+/* 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
+*/
 @include mat.all-component-themes($app-theme);
 
 @import url(https://unpkg.com/material-design-icons/iconfont/material-icons.css);
