fix: 优化带图名称的显示和预览

--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -222,23 +222,23 @@
       <div id="preview-row1">
         <mat-card>
           <mat-card-subtitle>原始标签</mat-card-subtitle>
-          <mat-card-content style="white-space: pre-wrap" [innerHtml]="(rendered | async)?.raw || ''">
+          <mat-card-content class="eh-raw" style="white-space: pre-wrap" [innerHtml]="(rendered | async)?.raw || ''">
           </mat-card-content>
         </mat-card>
         <mat-card>
           <mat-card-subtitle>名称 </mat-card-subtitle>
-          <mat-card-content class="md-container" [innerHtml]="(rendered | async)?.name | mark: '':true">
+          <mat-card-content class="md-container eh-name" [innerHtml]="(rendered | async)?.name | mark: '':true">
           </mat-card-content>
         </mat-card>
       </div>
       <mat-card>
         <mat-card-subtitle>描述 </mat-card-subtitle>
-        <mat-card-content class="md-container" [innerHtml]="(rendered | async)?.intro | mark: '':true">
+        <mat-card-content class="md-container eh-intro" [innerHtml]="(rendered | async)?.intro | mark: '':true">
         </mat-card-content>
       </mat-card>
       <mat-card>
         <mat-card-subtitle>外部链接 </mat-card-subtitle>
-        <mat-card-content class="md-container" [innerHtml]="(rendered | async)?.links | mark: '':true">
+        <mat-card-content class="md-container eh-links" [innerHtml]="(rendered | async)?.links | mark: '':true">
         </mat-card-content>
       </mat-card>
     </div>
