--- a/src/browser/app/user/user.component.html
+++ b/src/browser/app/user/user.component.html
@@ -1,6 +1,6 @@
 <button class="user-button" mat-button *ngIf="user && !loading" [matMenuTriggerFor]="userMenu">
-  <img [src]="user?.avatar_url" />
-  <span>{{ user?.name }}</span>
+  <img [src]="user.avatar_url" />
+  <span>{{ user.name }}</span>
 </button>
 <button class="user-button" mat-button *ngIf="!user && !loading" (click)="logIn()">
   <span class="iconfont" style="font-size: 1.8em">&#xe709; </span> 登录
