--- a/src/browser/app/github-corner/github-corner.component.html
+++ b/src/browser/app/github-corner/github-corner.component.html
@@ -2,7 +2,7 @@
   viewBox="0 0 250 250"
   style="fill: #151513; color: #fff; transform: scale(1, 1)"
   role="button"
-  aria-label="View source on GitHub"
+  aria-label="在 GitHub 上查看"
 >
   <path
     id="tribox"
@@ -10,7 +10,7 @@
     (mouseleave)="hover = false"
     d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"
     (click)="open()"
-    title="View source on GitHub"
+    title="在 GitHub 上查看"
   ></path>
   <path
     id="octo-arm"
