--- a/src/browser/styles/index.scss
+++ b/src/browser/styles/index.scss
@@ -17,7 +17,7 @@
 */
 @include mat.all-component-themes($app-theme);
 
-@import 'https://unpkg.com/material-design-icons/iconfont/material-icons.css';
+@import '~material-design-icons/iconfont/material-icons.css';
 
 @import 'iconfont.css';
 
