--- a/src/browser/styles/index.scss
+++ b/src/browser/styles/index.scss
@@ -8,23 +8,14 @@
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once! 
 */
-// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
-//  The following line adds:
-//    1. Default typography styles for all components
-//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
-//  If you specify typography styles for the components you use elsewhere, you should delete this line.
-//  If you don't need the default component typographies but still want the hierarchy styles,
-//  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy($app-typography);`
-@include mat.all-legacy-component-typographies($app-typography);
-@include mat.legacy-core();
+@include mat.core($app-typography);
 
 /* 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 */
-@include mat.all-legacy-component-themes($app-theme);
+@include mat.all-component-themes($app-theme);
 
 @import '~material-design-icons/iconfont/material-icons.css';
 
