feat: update template

--- a/src/browser/app/editor/editor.component.html
+++ b/src/browser/app/editor/editor.component.html
@@ -45,7 +45,16 @@
               </ng-template>
               <ng-template #nsNotAllowed>
                 该命名空间的标签暂不支持从此处修改，请<a
-                  [href]="dbRepo.issue(value('raw'), value('namespace'), (create | async) || undefined)"
+                  [href]="
+                    dbRepo.issue(
+                      value('raw'),
+                      value('namespace'),
+                      (create | async) || undefined,
+                      value('name'),
+                      value('intro'),
+                      value('links')
+                    )
+                  "
                   target="_blank"
                   >提交 ISSUE 讨论</a
                 >或<a [href]="dbRepo.code('database/' + (value('namespace') || 'rows') + '.md')" target="_blank"
@@ -56,7 +65,16 @@
           </mat-hint>
           <mat-error *ngIf="hasError('namespace', 'editableNs')"
             >该命名空间的标签暂不支持从此处修改，请<a
-              [href]="dbRepo.issue(value('raw'), value('namespace'), create | async)"
+              [href]="
+                dbRepo.issue(
+                  value('raw'),
+                  value('namespace'),
+                  create | async,
+                  value('name'),
+                  value('intro'),
+                  value('links')
+                )
+              "
               target="_blank"
               >提交 ISSUE 讨论</a
             >或<a [href]="dbRepo.code('database/' + (value('namespace') || 'rows') + '.md')" target="_blank"
