--- a/src/browser/app/editor/editor.component.scss
+++ b/src/browser/app/editor/editor.component.scss
@@ -81,6 +81,10 @@ $label-color: mat.get-color-from-palette($app-foreground, secondary-text);
 
       .md-container {
         margin: 10px 0 2px 8px;
+
+        &:hover {
+          color: mat.get-color-from-palette($app-foreground, text);
+        }
       }
     }
   }
