--- a/src/browser/app/list/list.component.html
+++ b/src/browser/app/list/list.component.html
@@ -11,29 +11,21 @@
         autocomplete="off"
         (paste)="pasting($event)"
       />
-      <span
-        *ngIf="(usingRegex | async) && (search | async)"
-        matSuffix
-        class="mat-hint"
-        matTooltip="正在使用正则表达式进行匹配"
-        matTooltipPosition="above"
-        >.*</span
-      >
-      <span
-        *ngIf="!(usingRegex | async) && (search | async)"
-        matSuffix
-        class="mat-hint"
-        matTooltip="正在使用普通文本进行匹配"
-        matTooltipPosition="above"
-        >ab</span
-      >
-      <span *ngIf="!(search | async)" matSuffix class="mat-hint"></span>
+      @if (search | async) { @if ((usingRegex | async) ) {
+      <span matSuffix class="mat-hint" matTooltip="正在使用正则表达式进行匹配" matTooltipPosition="above">.*</span>
+      } @else{
+      <span matSuffix class="mat-hint" matTooltip="正在使用普通文本进行匹配" matTooltipPosition="above">ab</span>
+      } }@else {
+      <span matSuffix class="mat-hint"></span>
+      }
     </mat-form-field>
     <mat-chip-list class="filter-list">
-      <mat-chip *ngIf="namespace | async" [removable]="true" [selectable]="false" (removed)="setNs()">
+      @if (namespace | async) {
+      <mat-chip [removable]="true" [selectable]="false" (removed)="setNs()">
         命名空间：{{ namespace | async }}
         <mat-icon matChipRemove>cancel</mat-icon>
       </mat-chip>
+      }
     </mat-chip-list>
     <span style="flex: 1 1 auto"></span>
     <mat-form-field style="width: 100px">
@@ -80,13 +72,15 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始标签</th>
           <td mat-cell *matCellDef="let row">
             <div class="eh-raw">
+              @if (row.namespace === 'rows' && row.raw !== 'temp') {
               <a
-                *ngIf="row.namespace === 'rows' && row.raw !== 'temp'; else notRow"
                 (click)="setNs(row.raw)"
                 [routerLink]="['/list', row.raw]"
                 [innerHTML]="row.raw | mark: (search | async)"
               ></a>
-              <ng-template #notRow><span [innerHTML]="row.raw | mark: (search | async)"></span></ng-template>
+              } @else {
+              <span [innerHTML]="row.raw | mark: (search | async)"></span>
+              }
             </div>
           </td>
         </ng-container>
@@ -151,8 +145,10 @@
         <tr mat-row *matRowDef="let row; columns: (displayedColumns | async) || []"></tr>
       </table>
     </div>
-    <div class="spinner" *ngIf="loading | async">
+    @if (loading | async) {
+    <div class="spinner">
       <mat-spinner></mat-spinner>
     </div>
+    }
   </section>
 </div>
