build: esbuild for browser

--- a/src/browser/styles/index.scss
+++ b/src/browser/styles/index.scss
@@ -26,7 +26,7 @@
 */
 @include mat.all-legacy-component-themes($app-theme);
 
-@import '~material-design-icons/iconfont/material-icons.css';
+@import 'material-design-icons/iconfont/material-icons.css';
 
 @import 'iconfont.css';
 
